fixed flickering issue and load state working perfectly with update button

--- a/src/app/components/AdvancedDescriptionEditor/component.module.css
+++ b/src/app/components/AdvancedDescriptionEditor/component.module.css
@@ -96,13 +96,13 @@
 .iconButton {
     padding: 5px 10px;
     cursor: pointer;
-    border: 0.8px solid #fff;
+    border: 0.8px solid var(--button-primary-hover);
     background-color: inherit;
     border-radius: 5px;
     transition: 0.3s ease-out;
 }
 
 .iconButton:hover {
-    background-color: #fff;
-    color: #000;
+    background-color: var(--button-primary-hover);
+    color: var(--button-secondary-hover);
 }
